@@ -2,3 +2,4 @@ Reference:
   Author: RW Penney
   URL: http://www.rwpenney.uk/software/index.html#cryptmount
   Bug-Database: https://sourceforge.net/p/cryptmount/bugs/
+  Repository-Browse: https://github.com/rwpenney/cryptmount
